[YW][#5988] Fix primary cluster widget texts issue
Summary:
Fix texts cut off issue for primary cluster widget at the universe overview page for small screens
{F14214}

Test Plan: Run UI, open any universe, resize the screen and pay attention to texts in the primary cluster widget

Reviewers: andrew

Reviewed By: andrew

Subscribers: ui

Differential Revision: https://phabricator.dev.yugabyte.com/D9656

--- a/managed/ui/src/components/universes/UniverseDetail/UniverseDetail.scss
+++ b/managed/ui/src/components/universes/UniverseDetail/UniverseDetail.scss
@@ -521,6 +521,16 @@ h2 {
     }
     .dl-inline {
       text-align: left;
+
+      // fix for <DescriptionList> on small screen sizes at the universe overview page
+      & > span {
+        display: flex;
+        padding: 3px 0;
+
+        & > dd {
+          margin-left: 10px;
+        }
+      }
     }
   }
 
